--- a/Scanner/Base.lproj/Main.storyboard
+++ b/Scanner/Base.lproj/Main.storyboard
@@ -1,14 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Aah-8q-Jfr">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="N7f-t3-UtE">
+            <objects>
+                <navigationController id="Aah-8q-Jfr" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="agu-vB-Ft2">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="3zx-lL-g5d"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Pyg-g2-Uv0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-892" y="-25"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -17,14 +34,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="7wT-HI-RKs">
-                                <rect key="frame" x="117.33333333333333" y="381" width="158.66666666666669" height="90"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bFS-E6-H3i">
+                                <rect key="frame" x="0.0" y="103" width="393" height="60"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z0k-Nx-XVk">
-                                        <rect key="frame" x="29.333333333333329" y="0.0" width="99.999999999999986" height="50"/>
+                                        <rect key="frame" x="273" y="0.0" width="100" height="60"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="100" id="OnJ-UE-k46"/>
-                                            <constraint firstAttribute="height" constant="50" id="tmB-m6-507"/>
+                                            <constraint firstAttribute="width" constant="100" id="Yz6-Sd-JSa"/>
                                         </constraints>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" image="scan"/>
@@ -32,30 +48,75 @@
                                             <action selector="tappedOnScanButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="lMl-EZ-kmm"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Scan BarCode" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="irE-vt-5U9">
-                                        <rect key="frame" x="0.0" y="60" width="158.66666666666666" height="30"/>
-                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="25"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BarCodes" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MOk-tG-ObA">
+                                        <rect key="frame" x="70" y="0.0" width="203" height="60"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qTl-A0-ved">
+                                        <rect key="frame" x="20" y="0.0" width="50" height="60"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="50" id="hj7-RR-9SR"/>
+                                        </constraints>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" title="Clear">
+                                            <color key="titleColor" name="AccentColor"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="clear:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Oxp-ER-wao"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
-                            </stackView>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="Z0k-Nx-XVk" secondAttribute="trailing" constant="20" id="0wN-3F-72l"/>
+                                    <constraint firstAttribute="bottom" secondItem="MOk-tG-ObA" secondAttribute="bottom" id="5v3-CW-1JJ"/>
+                                    <constraint firstItem="qTl-A0-ved" firstAttribute="top" secondItem="bFS-E6-H3i" secondAttribute="top" id="BH5-vu-7xJ"/>
+                                    <constraint firstAttribute="bottom" secondItem="qTl-A0-ved" secondAttribute="bottom" id="JUw-DT-JF2"/>
+                                    <constraint firstItem="Z0k-Nx-XVk" firstAttribute="top" secondItem="bFS-E6-H3i" secondAttribute="top" id="N6y-Vn-Lsz"/>
+                                    <constraint firstAttribute="height" constant="60" id="Xmy-bl-B6k"/>
+                                    <constraint firstItem="MOk-tG-ObA" firstAttribute="top" secondItem="bFS-E6-H3i" secondAttribute="top" id="YGc-Dw-Cis"/>
+                                    <constraint firstItem="MOk-tG-ObA" firstAttribute="leading" secondItem="qTl-A0-ved" secondAttribute="trailing" id="fBT-1i-ciy"/>
+                                    <constraint firstItem="Z0k-Nx-XVk" firstAttribute="leading" secondItem="MOk-tG-ObA" secondAttribute="trailing" id="h7q-Sm-FzH"/>
+                                    <constraint firstItem="qTl-A0-ved" firstAttribute="leading" secondItem="bFS-E6-H3i" secondAttribute="leading" constant="20" id="iB5-ZN-LgW"/>
+                                    <constraint firstAttribute="bottom" secondItem="Z0k-Nx-XVk" secondAttribute="bottom" id="u1J-cJ-Iez"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="NoA-C5-bja">
+                                <rect key="frame" x="0.0" y="163" width="393" height="655"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="Lsj-ke-FlA"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="7wT-HI-RKs" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bcH-vo-b6b"/>
-                            <constraint firstItem="7wT-HI-RKs" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="oXZ-BX-zxK"/>
+                            <constraint firstItem="bFS-E6-H3i" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="1ba-Xr-ymt"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="NoA-C5-bja" secondAttribute="trailing" id="8uS-p2-fyU"/>
+                            <constraint firstItem="bFS-E6-H3i" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="9dJ-Ab-pYf"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="bFS-E6-H3i" secondAttribute="trailing" id="Hgh-Xe-4h6"/>
+                            <constraint firstItem="NoA-C5-bja" firstAttribute="top" secondItem="bFS-E6-H3i" secondAttribute="bottom" id="dgD-Np-jR5"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="NoA-C5-bja" secondAttribute="bottom" id="rjT-OA-Eh6"/>
+                            <constraint firstItem="NoA-C5-bja" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="tya-Fk-szw"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="XCB-uB-mmc"/>
+                    <connections>
+                        <outlet property="tableView" destination="NoA-C5-bja" id="9a4-vf-ZVc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-79" y="4"/>
+            <point key="canvasLocation" x="134" y="-25"/>
         </scene>
     </scenes>
     <resources>
         <image name="scan" width="1024" height="1024"/>
+        <namedColor name="AccentColor">
+            <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
